# arch-tensor-lab

./: .gitignore  README.md  README.pt-BR.md  main.py  pyproject.toml  run.sh  run_agent_v1.sh  run_agent_v2.sh  run_agent_v3.sh  run_agent_v4.sh
data/raw/: bash_commands.txt
docs/en/: 01-data-ingestion-and-tokenization.md  02-dataloader.md  03-transformer.md
docs/pt-br/: 01-data-ingestion-and-tokenization.md  02-dataloader.md  03-transformer.md
scripts/: chat.py  chat_bpe.py  convert_parquet.py  generate_bash_dataset.py
src/config/: model_config.py
src/data/: bpe_tokenizer.py  loader.py  tokenizer.py
src/model/: attention.py  bitlinear.py  linear.py  transformer.py
src/types/: precision.py
tests/data/: test_loader.py  test_tokenizer.py
