[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arch-tensor-lab"
version = "0.1.0"
authors = [
  { name="Leonardo Policarpo", email="leo.dumont@outlook.com" },
]
description = "From-scratch LLM architecture experiments. A local CPU-first environment to understand the math behind Transformers, tokenization, and backpropagation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy"
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]